--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -13,10 +13,11 @@
         <RowConstraints />
         <RowConstraints />
         <RowConstraints />
+      <RowConstraints />
     </rowConstraints>
     <children>
         <TextArea fx:id="logsTextArea" promptText="Здесь будет лог" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
-        <HBox GridPane.rowIndex="2">
+        <HBox GridPane.rowIndex="3">
             <children>
                 <TextField fx:id="commandTextField" prefHeight="25.0" prefWidth="371.0" promptText="Команда для получения логов" text="adb logcat -t 500" HBox.hgrow="ALWAYS">
                     <opaqueInsets>
@@ -30,8 +31,9 @@
                 </Button>
             </children>
         </HBox>
+      <CheckBox fx:id="removeNewLinesCheckbox" mnemonicParsing="false" selected="true" text="Удалять переносы" GridPane.rowIndex="2" />
         <TextField fx:id="prefixTextField" promptText="Строка для обрезки (прим. 12-06 05:38:57.454 1672-1755/ru.ireca.menu D/FA:)" GridPane.rowIndex="1" />
-        <HBox prefHeight="0.0" prefWidth="478.0" GridPane.rowIndex="3">
+        <HBox prefHeight="0.0" prefWidth="478.0" GridPane.rowIndex="4">
             <children>
                 <TextField fx:id="webQueryTextField" prefHeight="25.0" prefWidth="372.0" promptText="JSON web запрос. Используйте %s в качестве параметра" text="http://jsoneditoronline.org/" HBox.hgrow="ALWAYS" />
                 <Button fx:id="goToButton" mnemonicParsing="false" onAction="#handleAction" prefHeight="25.0" prefWidth="223.0" text="GoTo" HBox.hgrow="NEVER">
